style.css
/* Universal Selector to remove default browser settings */
* {
  padding: 0rem;
  margin: 0rem;
  box-sizing: border-box;
}

@font-face {
  font-family: "Inter";
  src: url("./assets/fonts/Inter-VariableFont_opsz_wght.ttf");
  font-weight: 400 700;
}

@font-face {
  font-family: "Lexend";
  src: url("./assets/fonts/LexendDeca-VariableFont_wght.ttf");
  font-weight: 400;
}

/* CSS Variables */
:root {
  /* Primary */

  --main-background: hsl(233, 47%, 7%);
  --card-background: hsl(244, 38%, 16%);
  --accent: hsl(277, 64%, 61%);

  /* Neutral */

  --main-heading-stats: hsl(0, 0%, 100%);
  --main-paragraph: hsla(0, 0%, 100%, 0.75);
  --stat-headings: hsla(0, 0%, 100%, 0.6);
}

html {
  font-size: 15px;
}

body {
  font-family: "Lexend";
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: var(--main-background);
}

section {
  display: inherit;
  justify-content: center;
  width: 1140px;
  height: 446px;
}

.content {
  display: flex;
  flex-direction: column;
  width: 50%;
  gap: 4.5rem;
  background-color: var(--card-background);
  padding: 5rem 7rem 5rem 5rem;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}

.stats {
  display: flex;
  justify-content: space-between;
  padding-right: 4.5rem;
}

.content h1,
.stats .category h2 {
  color: var(--main-heading-stats);
  font-weight: 700;
}

.content h1 {
  font-family: "Inter";
  font-size: 2.6rem;
  margin-bottom: 1.5rem;
}

.content h1 span {
  color: var(--accent);
  font-family: "Inter";
}

.content p {
  color: var(--main-paragraph);
  line-height: 1.6;
  padding-right: 4rem;
}

.stats .category h2 {
  padding-bottom: 0.5rem;
  font-weight: 400;
}

.stats .category h3 {
  color: var(--stat-headings);
  font-family: "Inter";
  font-size: 0.8rem;
  font-weight: 400;
  letter-spacing: 1.5px;
  text-transform: uppercase;
}

.img-container {
  background-color: var(--accent);
}

.img-container img {
  opacity: 0.5;
}

.img-container img,
.img-container {
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  main {
    width: 375px;
    height: 956px;
  }

  section {
    flex-direction: column-reverse;
    margin: 0 48px;
  }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) and (max-width: 767px) {
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) and (max-width: 991px) {
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) and (max-width: 1199px) {
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
}

